gcp-not-production/elasticstack/elasticsearch/elasticsearch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: elasticstack
spec:
  ports:
    - port: 80
      targetPort: 9200
  selector:
    app: elasticsearch
