gcp-not-production/elasticstack/elasticsearch/elasticsearch-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: elasticsearch
  namespace: elasticstack
spec:
  hosts:
  - "elasticsearch.runsix.app"
  gateways:
  - istio.default.svc.cluster.local
  http:
  - name: "elasticsearch"
    route:
      - destination:
          host: elasticsearch.elasticstack.svc.cluster.local
